--- a/style.css
+++ b/style.css
@@ -134,9 +134,7 @@ table {
     border-spacing: 0;
 }
 
-
-
-/* My CSS==================================================== */
+/* ============================================================= */
 
 body {
     font-family: 'Maven Pro', sans-serif;
@@ -174,7 +172,6 @@ body {
     margin: auto;
 }
 
-
 .icon {
     width: 1.5rem;
     height: 2rem;
@@ -193,7 +190,7 @@ body {
 
 .cont1 {
     background-color: white;
-    height: 100vh;
+    height: auto;
     min-height: 100%;
     display: block;
 }
@@ -208,6 +205,8 @@ body {
 .abtTxt {
     margin-top: 2rem;
     font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 .picCont {
@@ -221,31 +220,12 @@ body {
     margin: 2rem;
 }
 
-.aboutMe {
-    font-size: 3rem;
-    font-weight: 600;
-    text-align: center;
-    margin-top: 1rem;
-}
-
-/* .colSecond {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-} */
-
-.abtTxt {
-    text-align: center;
-    margin-bottom: 1rem;
-}
-
 .projectSec {
-    background-color: white;
-    height: 100vh;
+    background-color: black;
+    height: auto;
     max-height: 100%;
     display: flex
 }
-
 
 @media(max-width: 480px) {
     .iconRow {
@@ -254,8 +234,6 @@ body {
         text-align: center;
         width: auto;
     }
-
-
 
     .mainTitle {
         /* transform: translateY(13rem); */
@@ -275,6 +253,7 @@ body {
         /* transform: translateY(13rem); */
         /* margin: auto; */
         transform: translateY(-20);
+        text-align: center;
     }
 
 
@@ -284,506 +263,109 @@ body {
         height: 1.5rem;
     }
 
-    /* .cont1 {
-        height: 100vh;
-    }
+    /* /* .cont1 {
+     height: 100vh;
+ }
 
-    .projectSec {
-        height: 100vh;
+ .projectSec {
+     height: 100vh; */
 
+}
 
-
-    } */
-
-    @media(min-width: 480px) {
-        .iconRow {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            text-align: center;
-            /* width: auto; */
-        }
-
-        .mainBody {
-            height: 100vh
-        }
-
-        .cont1 {
-            height: 100vh;
-        }
-
-        .projectSec {
-            height: 100vh;
-        }
-    }
-
-    @media(min-width: 768px) {
-        .iconRow {
-            display: flex;
-            text-align: center;
-            width: auto;
-        }
-
-        .mainBody {
-            height: 100vh
-        }
-
-        .mainTitle {
-            margin: auto;
-            font-size: 4rem
-        }
-
-        .mainText {
-            margin: auto;
-            font-size: 1.5rem;
-        }
-
-        .iconRow {
-            margin: auto;
-        }
-
-        .icon {
-            display: inline;
-            width: 2.5rem;
-            height: 3rem;
-        }
-
-        .cont1 {
-            height: 100vh;
-        }
-
-        .projectSec {
-            height: 100vh;
-        }
-    }
-
-    @media(min-width: 912px) {
-        .mainBody {
-            height: 100vh
-        }
-
-        .mainTitle {
-            margin: auto;
-            font-size: 4rem
-        }
-
-        .mainText {
-            margin: auto;
-            font-size: 1.5rem;
-        }
-
-        .iconRow {
-            margin: auto;
-        }
-
-        .icon {
-            display: inline;
-            width: 3rem;
-            height: 3.5rem;
-        }
-
-        .cont {
-            height: 100vh;
-        }
-
-        .projectSec {
-            height: 100vh;
-        }
-
-    }
-
-    @media(min-width: 1200px) {}
-
-    /* http://meyerweb.com/eric/tools/css/reset/ 
-    v2.0 | 20110126
-    License: none (public domain)
- */
-
-    html,
-    body,
-    div,
-    span,
-    applet,
-    object,
-    iframe,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    blockquote,
-    pre,
-    a,
-    abbr,
-    acronym,
-    address,
-    big,
-    cite,
-    code,
-    del,
-    dfn,
-    em,
-    img,
-    ins,
-    kbd,
-    q,
-    s,
-    samp,
-    small,
-    strike,
-    strong,
-    sub,
-    sup,
-    tt,
-    var,
-    b,
-    u,
-    i,
-    center,
-    dl,
-    dt,
-    dd,
-    ol,
-    ul,
-    li,
-    fieldset,
-    form,
-    label,
-    legend,
-    table,
-    caption,
-    tbody,
-    tfoot,
-    thead,
-    tr,
-    th,
-    td,
-    article,
-    aside,
-    canvas,
-    details,
-    embed,
-    figure,
-    figcaption,
-    footer,
-    header,
-    hgroup,
-    menu,
-    nav,
-    output,
-    ruby,
-    section,
-    summary,
-    time,
-    mark,
-    audio,
-    video {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        font-size: 100%;
-        font: inherit;
-        vertical-align: baseline;
-    }
-
-    /* HTML5 display-role reset for older browsers */
-    article,
-    aside,
-    details,
-    figcaption,
-    figure,
-    footer,
-    header,
-    hgroup,
-    menu,
-    nav,
-    section {
-        display: block;
-    }
-
-    body {
-        line-height: 1;
-    }
-
-    ol,
-    ul {
-        list-style: none;
-    }
-
-    blockquote,
-    q {
-        quotes: none;
-    }
-
-    blockquote:before,
-    blockquote:after,
-    q:before,
-    q:after {
-        content: '';
-        content: none;
-    }
-
-    table {
-        border-collapse: collapse;
-        border-spacing: 0;
-    }
-
-
-
-    /* My CSS==================================================== */
-
-    body {
-        font-family: 'Maven Pro', sans-serif;
-    }
-
-    .titleName {
-        font-weight: 600;
+@media(min-width: 480px) {
+    .iconRow {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        text-align: center;
+        /* width: auto; */
     }
 
     .mainBody {
-        background-color: black;
-        height: 100vh;
-        display: block;
-        /* position: fixed; */
-        /* to fill the whole screen */
-        min-height: 100%;
-
-    }
-
-    .mainTitle {
-        font-weight: 600;
-        font-size: 3rem;
-        display: block;
-        text-align: center;
-        transform: translateY(20rem);
-        /* elements always centered */
-        margin: auto
-    }
-
-    .mainText {
-        text-align: center;
-        transform: translateY(22rem);
-        color: antiquewhite;
-        margin-top: 1rem;
-        margin: auto;
-    }
-
-
-    .icon {
-        width: 1.5rem;
-        height: 2rem;
-        margin: auto;
-
-    }
-
-    .iconRow {
-        display: flex;
-        justify-content: center;
-        transform: translateY(23rem);
-        max-width: 26rem;
-        margin: auto;
-        margin-top: 1rem;
+        height: 100vh
     }
 
     .cont1 {
-        background-color: white;
         height: 100vh;
-        min-height: 100%;
-        display: block;
-    }
-
-    .aboutMe {
-        font-size: 3rem;
-        font-weight: 600;
-        text-align: center;
-        margin-top: 1rem;
-    }
-
-    .abtTxt {
-        margin-top: 2rem;
-        font-size: 1.5rem;
-    }
-
-    .picCont {
-        display: flex;
-        justify-content: center;
-    }
-
-    .myPic {
-        width: 15rem;
-        height: 15rem;
-        margin: 2rem;
-    }
-
-    .aboutMe {
-        font-size: 3rem;
-        font-weight: 600;
-        text-align: center;
-        margin-top: 1rem;
-    }
-
-    /* .colSecond {
-     display: flex;
-     justify-content: center;
-     text-align: center;
- } */
-
-    .abtTxt {
-        text-align: center;
-        margin-bottom: 1rem;
     }
 
     .projectSec {
-        background-color: white;
         height: 100vh;
-        max-height: 100%;
-        display: flex
+    }
+}
+
+@media(min-width: 768px) {
+    .iconRow {
+        display: flex;
+        text-align: center;
+        width: auto;
     }
 
+    .mainBody {
+        height: 100vh
+    }
 
-    @media(max-width: 480px) {
-        .iconRow {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            text-align: center;
-            width: auto;
-        }
+    .mainTitle {
+        margin: auto;
+        font-size: 4rem
+    }
 
+    .mainText {
+        margin: auto;
+        font-size: 1.5rem;
+    }
 
+    .iconRow {
+        margin: auto;
+    }
 
-        .mainTitle {
-            /* transform: translateY(13rem); */
-            /* margin: auto; */
-            font-size: 2rem;
-            transform: translateY(20);
-        }
+    .icon {
+        display: inline;
+        width: 2.5rem;
+        height: 3rem;
+    }
 
-        .mainText {
-            /* transform: translateY(13rem); */
-            /* margin: auto; */
-            font-size: 0.8rem;
-            transform: translateY(-20);
-        }
+    .cont1 {
+        height: 100vh;
+    }
 
-        .iconRow {
-            /* transform: translateY(13rem); */
-            /* margin: auto; */
-            transform: translateY(-20);
-        }
+    .projectSec {
+        height: 100vh;
+    }
+}
 
+@media(min-width: 912px) {
+    .mainBody {
+        height: 100vh
+    }
 
-        .icon {
-            display: inline;
-            width: 1rem;
-            height: 1.5rem;
-        }
+    .mainTitle {
+        margin: auto;
+        font-size: 4rem
+    }
 
-        /* .cont1 {
-         height: 100vh;
-     }
- 
-     .projectSec {
-         height: 100vh;
- 
- 
- 
-     } */
+    .mainText {
+        margin: auto;
+        font-size: 1.5rem;
+    }
 
-        @media(min-width: 480px) {
-            .iconRow {
-                display: grid;
-                grid-template-columns: 1fr 1fr 1fr;
-                text-align: center;
-                /* width: auto; */
-            }
+    .iconRow {
+        margin: auto;
+    }
 
-            .mainBody {
-                height: 100vh
-            }
+    .icon {
+        display: inline;
+        width: 3rem;
+        height: 3.5rem;
+    }
 
-            .cont1 {
-                height: 100vh;
-            }
+    .cont {
+        height: 100vh;
+    }
 
-            .projectSec {
-                height: 100vh;
-            }
-        }
+    .projectSec {
+        height: 100vh;
+    }
 
-        @media(min-width: 768px) {
-            .iconRow {
-                display: flex;
-                text-align: center;
-                width: auto;
-            }
+}
 
-            .mainBody {
-                height: 100vh
-            }
-
-            .mainTitle {
-                margin: auto;
-                font-size: 4rem
-            }
-
-            .mainText {
-                margin: auto;
-                font-size: 1.5rem;
-            }
-
-            .iconRow {
-                margin: auto;
-            }
-
-            .icon {
-                display: inline;
-                width: 2.5rem;
-                height: 3rem;
-            }
-
-            .cont1 {
-                height: 100vh;
-            }
-
-            .projectSec {
-                height: 100vh;
-            }
-        }
-
-        @media(min-width: 912px) {
-            .mainBody {
-                height: 100vh
-            }
-
-            .mainTitle {
-                margin: auto;
-                font-size: 4rem
-            }
-
-            .mainText {
-                margin: auto;
-                font-size: 1.5rem;
-            }
-
-            .iconRow {
-                margin: auto;
-            }
-
-            .icon {
-                display: inline;
-                width: 3rem;
-                height: 3.5rem;
-            }
-
-            .cont {
-                height: 100vh;
-            }
-
-            .projectSec {
-                height: 100vh;
-            }
-
-        }
-
-        @media(min-width: 1200px) {}
+@media(min-width: 1200px) {}
