--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ table {
 
 body {
     font-family: 'Maven Pro', sans-serif;
+    background-color: white;
 }
 
 .titleName {
@@ -190,10 +191,11 @@ body {
 }
 
 .cont1 {
-    background-color: white;
+    background-color: #4f5d75;
     height: auto;
     min-height: 100%;
     display: block;
+    margin-top: -3rem;
 }
 
 .aboutMe {
@@ -293,6 +295,37 @@ img:hover {
     opacity: 1;
 }
 
+#tools,
+#skills,
+#educ {
+    margin-top: -2rem;
+}
+
+#projects {
+    margin-top: 6rem;
+}
+
+
+.contactForm {
+    margin-top: -1rem;
+    padding-bottom: 2rem;
+    background-color: #4f5d75;
+
+}
+
+.contact {
+    font-weight: 600;
+    font-size: 3rem;
+    text-align: center;
+    margin-bottom: 5rem;
+    padding-top: 4rem;
+}
+
+.mynav {
+    width: auto;
+}
+
+
 
 @media(max-width: 480px) {
     .titleName {
@@ -340,7 +373,11 @@ img:hover {
     }
 
     .aboutMe {
-        margin-top: -2rem;
+        margin-top: 1.5rem;
+    }
+
+    #skills {
+        margin-top: 1rem;
     }
 
     /* /* .cont1 {
